fix the lists of countries for a given continent ; fix a layout alignment bug in the geonav raw list

--- a/telemeta/htdocs/css/telemeta.css
+++ b/telemeta/htdocs/css/telemeta.css
@@ -151,7 +151,8 @@ a img { border: none; }
 ul.continents, ul.continents ul { list-style: none; margin: 0; padding: 0;}
 ul.continents { margin: 1em 0; }
 ul.continents ul {margin-left: 0; margin-bottom: 0.9em; padding: 0 1em 1em 0;}
-ul.continents li.name { width: 460px; float: left; margin-right: 30px;}
+ul.continents li.name { width: 460px; float: left; clear: left; margin-right: 30px;}
+ul.continents li.odd { clear: none;}
 ul.continents li.name b { font-size: 120%; font-weight: bold; }
 ul.continents ul li { display: inline; padding-right: 2em;}
 ul.continents ul li a { line-height: 1.8em; }
